# gstat

./: CHANGES  DESCRIPTION  INDEX  MD5  NAMESPACE  aclocal.m4  cleanup  configure  configure.00  configure.in  configure.win  makefile.in
R/: bpy.colors.R  bubble.R  fit.lmc.R  fit.variogram.R  fit.variogram.gls.R  fit.variogram.reml.R  get.contr.R  gstat.R  gstat.cv.R  gstat.debug.R  gstat.formula.R  gstat.formula.predict.R  hscat.R  image.data.frame.R  krige.R  krige.cv.R  krige0.R  krigeTg.R  load.variogram.model.R  makegrid.R  map.to.lev.R  mapasp.R  ossfim.R  panel.point.pairs.R  panel.pointPairs.R  plot.gstatVariogram.R  plot.point.pairs.R  plot.pointPairs.R  plot.variogram.R  plot.variogram.cloud.R  plot.variogramCloud.R  point.in.polygon.R  predict.gstat.R  print.gstat.R  print.variogram.R  print.variogram.cloud.R  print.variogram.model.R  print.variogramCloud.R  print.variogramModel.R  select.spatial.R  (+19 more)
data/: 00Index  Chlorid92.csv  DE_RB_2005.rda  coalash.R  coalash.rda  fulmar.R  fulmar.rda  jura.R  jura.rda  meuse.R  meuse.all.R  meuse.all.rda  meuse.alt.R  meuse.alt.rda  meuse.grid.R  ncp.grid.R  ncp.grid.rda  oxford.R  oxford.rda  pcb.rda  sic2004.R  sic2004.rda  sic97.rda  tull.rda  vv.rda  walker.R  walker.rda  wind.rda
demo/: 00Index  a2p.R  block.R  blue.R  cokriging.R  comp_geoR.R  cosimulation.R  examples.R  fulmar.R  grass.R  gstat3D.R  ikr.R  krige.R  lhs.R  lnsim.R  localKrigeST.R  pcb.R  rep.R  sic2004.R  snow.R  stkrige.R  ugsim.R  uisim.R  weight.R  wind.R
inst/: CITATION  ChangeLog  NEWS.Rd
inst/doc/: Rplots.ps  gstat-002.eps  gstat-003.eps  gstat-004.eps  gstat-005.eps  gstat-007.eps  gstat-009.eps  gstat-011.eps  gstat-013.eps  gstat-015.eps  gstat-017.eps  gstat-019.eps  gstat-021.eps  gstat.R  gstat.Rout.save  gstat.rnw  gstat.tex  prs.Rnw  spatio-temporal-kriging.Rnw  st.R  st.Rnw
man/: bpy.colors.Rd  bubble.Rd  fit.StVariogram.Rd  fit.lmc.Rd  fit.variogram.Rd  fit.variogram.gls.Rd  fit.variogram.reml.Rd  fulmar.Rd  get.contr.Rd  gstat-internal.Rd  gstat.Rd  hscat.Rd  image.Rd  jura.Rd  krige.Rd  krige.cv.Rd  krigeST.Rd  krigeTg.Rd  makegrid.Rd  map.to.lev.Rd  mapasp.Rd  meuse.Rd  meuse.all.Rd  meuse.alt.Rd  meuse.grid.Rd  ncp.grid.Rd  nmin  ossfim.Rd  oxford.Rd  pcb.Rd  plot.gstatVariogram.Rd  plot.point.pairs.Rd  plot.pointPairs.Rd  plot.variogram.Rd  plot.variogram.cloud.Rd  plot.variogramCloud.Rd  point.in.polygon.Rd  predict.gstat.Rd  select.spatial.Rd  show.vgms.Rd  (+17 more)
src/: Makevars.in  block.c  chfactor.c  chol.c  config.h  config.hin  config.w32  copy.c  data.c  data.h  debug.h  defaults.h  defs.h  direct.c  direct.h  err.c  err.h  errs  fit.c  gcdist.c  getest.c  gls.c  glvars.c  glvars.h  gstat.def  hsehldr.c  init.c  ivecop.c  lex.c  lex.l  lhs.c  lm.c  lm.h  lm_type.h  lufactor.c  machine.c  machine.hin  machine.w32  makefile.in  mapio.c  (+69 more)
src/meschach/: dmacheps.c  fmacheps.c
tests/: blockkr.R  blockkr.Rout.save  covtable.R  covtable.Rout.save  cv.R  cv.Rout.save  cv3d.Rout.save  fit.R  fit.Rout.save  krige0.R  krige0.Rout.save  line.R  line.Rout.save  merge.R  merge.Rout.save  na.action.R  na.action.Rout.save  ossfim.R  ossfim.Rout.save  reml.R  reml.Rout.save  rings.R  rings.Rout.save  sim.R  sim.Rout.save  stars.Rout.save  unproj.R  unproj.Rout.save  variogram.R  variogram.Rout.save  vdist.R  vdist.Rout.save  windst.R  windst.Rout.save
tests/Examples/: gstat-Ex.Rout.save
vignettes/: gstat.Rnw  gstat.Rout.save  prs.Rout.save  spatio-temporal-kriging.Rnw  st.Rnw
